# powerx-analysis

./: README.md  pyproject.toml  site_data_exploration.ipynb
data/: SiteData.csv
